Adds placeholder to search input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <form class="search">
-        <input class="searchTerm" type="search" name="site-search" id="site-search" aria-label="Search through site content">
+        <input class="searchTerm" type="search" name="site-search" id="site-search" aria-label="Search through site content" placeholder="I want to look for?">
 
         <button class="searchButton">Search</button>
     </form>
